--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk android:minSdkVersion="7" />
 
     <application
-        android:icon="@drawable/bee"
+        android:icon="@drawable/mainlogo"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
