--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.com.karl.dida"
+    package="com.yayun.yundic"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,7 +11,7 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".LogoActivity" >
+            android:name="com.yayun.yundic.LogoActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,22 +19,22 @@
             </intent-filter>
         </activity>
         
-        <activity android:name=".MainActivity" >
+        <activity android:name="com.yayun.yundic.MainActivity" >
         </activity>
-        <activity android:name=".WordsBookActivity" >
+        <activity android:name="com.yayun.yundic.WordsBookActivity" >
         </activity>
-        <activity android:name=".TransActivity" >
+        <activity android:name="com.yayun.yundic.TransActivity" >
         </activity>
         <activity android:name="org.lxh.demo.TestActivity" >
         </activity>
         <activity android:name="org.lxh.demo.MoreActivity" >
         </activity>
-        <activity android:name=".DidaActivity"/>
+        <activity android:name="com.yayun.yundic.DidaActivity"/>
         
-         <activity android:name=".RegisterActivity"/>
-          <activity android:name=".SendMailActivity"/>
-           <activity android:name=".TestsActivity"/>
-           <activity android:name=".WordShow"
+         <activity android:name="com.yayun.yundic.RegisterActivity"/>
+          <activity android:name="com.yayun.yundic.SendMailActivity"/>
+           <activity android:name="com.yayun.yundic.TestsActivity"/>
+           <activity android:name="com.yayun.yundic.WordShow"
                android:theme="@android:style/Theme.Dialog"/>
            
     </application>
