--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yayun.yundic"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk android:minSdkVersion="7" />
 
@@ -28,6 +28,10 @@
         <activity android:name="org.lxh.demo.TestActivity" >
         </activity>
         <activity android:name="org.lxh.demo.MoreActivity" >
+        </activity>
+       <activity android:name="org.lxh.demo.RegisterActivity" >
+        </activity>
+        <activity android:name="org.lxh.demo.SendMailActivity" >
         </activity>
         <activity android:name="com.yayun.yundic.DidaActivity"/>
         
